--- a/images.html
+++ b/images.html
@@ -10,7 +10,14 @@
 </head>
 
 <body>
+    <div class="responsive-image ">
+        <img src="./images/daniil-onischenko-uFSZldf9xeM-unsplash.jpg" />
 
+    </div>
+    <div class="round-image">
+        <img src="./images/daniil-onischenko-uFSZldf9xeM-unsplash.jpg" />
+
+    </div>
 </body>
 
 </html>
