types of input field added

--- a/input.html
+++ b/input.html
@@ -11,8 +11,24 @@
 
 <body>
     <div>
-        <label for="user-input">Input</label>
-        <input type="text" name="user-input" id="user-input">
+        <label for="user-input" class="input-label">Input</label>
+        <input type="text" placeholder="Enter valid email address" name="user-input" id="user-input">
+    </div>
+    <div>
+        <label for="user-input" class="input-label">Input</label>
+        <input type="text" placeholder="Enter valid email address" name="user-input" id="user-input"
+            class="user-input-warning">
+    </div>
+    <div>
+        <label for="user-choice-radio" class="user-radio">Radio</label>
+        <input type="radio" name="user-choice-radio" id="user-choice-radio">
+
+        <input type="radio" name="user-choice-radio" id="user-choice-radio">
+    </div>
+    <div>
+        <label for="user-choice-check" class="user-checkbox">Options</label>
+        <input type="checkbox" name="user-choice-check" id="user-choice-check">
+        <input type="checkbox" name="user-choice-check" id="user-choice-check">
     </div>
 </body>
 
