--- a/alert.html
+++ b/alert.html
@@ -10,6 +10,52 @@
 </head>
 
 <body>
+    <div class="alert alert-info">
+
+        <div class="info-icon">
+            <img src="./svg/icons8-info.svg" />
+        </div>
+
+        <div class="alert-msg info">
+            <p>This is an info alert!</p>
+        </div>
+
+        <div class="close">
+            <img src="./svg/icons8-close.svg" />
+        </div>
+    </div>
+
+    <div class="alert success-info">
+
+        <div class="info-icon">
+            <img src="./svg/icons8-ok.svg" />
+        </div>
+
+        <div class="alert-msg info">
+            <p>This is an success alert!</p>
+        </div>
+
+        <div class="close">
+            <img src="./svg/icons8-close.svg" />
+        </div>
+
+    </div>
+
+    <div class="alert warning-info">
+
+        <div class="info-icon">
+            <img src="./svg/icons8-warning-64.png" />
+        </div>
+
+        <div class="alert-msg info">
+            <p>This is an warning alert</p>
+        </div>
+
+        <div class="close">
+            <img src="./svg/icons8-close.svg" />
+        </div>
+
+    </div>
 
 </body>
 
