--- a/componentLibrary.html
+++ b/componentLibrary.html
@@ -6,10 +6,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lunatic UI</title>
+    <link rel="stylesheet" href="./sidebar.css" />
 </head>
 
 <body>
+    <div class="side-bar">
+        <div class="side-bar-heading">
+            <div>
+                <h1>Filter</h1>
+            </div>
+            <div>
+                <h1>Clear</h1>
+            </div>
+        </div>
+        <div class="price-heading">
+            <a href="#"> Card</a>
 
+        </div>
+        <div class="price-heading">
+            <a href="">Responsive Image
+            </a>
+
+        </div>
+        <div class="price-heading">
+            <h2>Buttons</h2>
+
+        </div>
+        <div class="price-heading">
+            <h2>Snackbar</h2>
+
+        </div>
+        <div class="price-heading">
+            <h2>Alert</h2>
+
+        </div>
+        <div class="price-heading">
+            <h2>Badges</h2>
+
+        </div>
+        <div class="price-heading">
+            <h2>Input</h2>
+
+        </div>
+    </div>
 </body>
 
 </html>
