--- a/cards.html
+++ b/cards.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="card-component cards-layout">
+    <div class="card-component display-layout">
         <div class="card-horizontal card-margin">
             <div class="img-container horizontal">
                 <img src="https://images.unsplash.com/photo-1513789181297-6f2ec112c0bc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=388&q=80"
