--- a/cards.html
+++ b/cards.html
@@ -11,6 +11,18 @@
 </head>
 
 <body>
+    <div class="side-bar  side-bar-display">
+        <a href="./cards.html">Cards</a>
+        <a href="./avatar.html">Avatar</a>
+        <a href="./badges.html">Badges</a>
+        <a href="./buttons.html">Buttons</a>
+        <a href="./snackbar.html">Snackbar</a>
+        <a href="./alerts.html">Alert</a>
+        <a href="./inputs.html">Inputs</a>
+        <a href="./carousel.html">Carousel</a>
+
+        <a href="./responsiveimage.html">Responsive Image</a>
+    </div>
     <div class="card-component display-layout">
         <div class="card-horizontal card-margin">
             <div class="img-container horizontal">
