--- a/responsiveimage.html
+++ b/responsiveimage.html
@@ -11,6 +11,18 @@
 </head>
 
 <body>
+    <div class="side-bar side-bar-display">
+        <a href="./cards.html">Cards</a>
+        <a href="./avatar.html">Avatar</a>
+        <a href="./badges.html">Badges</a>
+        <a href="./buttons.html">Buttons</a>
+        <a href="./snackbar.html">Snackbar</a>
+        <a href="./alerts.html">Alert</a>
+        <a href="./inputs.html">Inputs</a>
+        <a href="./carousel.html">Carousel</a>
+        <a href="./snackbar.html"></a>
+        <a href="./responsiveimage.html"></a>
+    </div>
     <div class="display-layout">
         <div class="responsive-image ">
             <img src="/Images/daniil-onischenko-uFSZldf9xeM-unsplash.jpg" />
