layout changes done

--- a/snackbar.html
+++ b/snackbar.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="display-grid">
-        <div class="side-bar">
+        <div class="side-bar side-bar-display">
             <a href="./cards.html">Cards</a>
             <a href="./avatar.html">Avatar</a>
             <a href="./badges.html">Badges</a>
